Delete TODO, fixed image _overflow_

--- a/styles.css
+++ b/styles.css
@@ -121,11 +121,5 @@ section {
   /* justify-content: center; */
   border-radius: 20px;
   box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.1);
-}
-
-section img {
-  /* FIXME AND TODO: Why do I have to include a border here if the div parent
-  * already has the border, why is it being ignored? */
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
+  overflow: hidden;
 }
